# proyecto-final/src/routes/componente.js
@@ -1,6 +1,6 @@
 const express = require('express');
 
-const { createPlacaBase,createProcesador,createRam,createGrafica,createDiscoDuro,createRefrigeracion,getComponentes} = require('../controllers/componente');
+const { createPlacaBase,createProcesador,createRam,createGrafica,createDiscoDuro,createRefrigeracion,getComponentes,deleteComponente} = require('../controllers/componente');
 
 const router = express.Router();
 
@@ -11,6 +11,7 @@ router.post('/grafica', createGrafica);
 router.post('/discoduro', createDiscoDuro);
 router.post('/refrigeracion', createRefrigeracion);
 router.get('/',getComponentes);
+router.delete('/:referencia',deleteComponente);
 
 
 
